--- a/Study Guides/Audio Analysis and Machine Listening.html
+++ b/Study Guides/Audio Analysis and Machine Listening.html
@@ -621,7 +621,7 @@ Ndef(\analyse, {arg in, num=6;
 })
 )</pre>
 
-<p>Now we can do partial tracking by specifying the number of strongest bins we want to access.<pre class='code prettyprint lang-sc'>Ndef(\analyse).set(\num, 12);
+<p>Now we can do partial tracking by specifying the number of strongest partials we want to access.<pre class='code prettyprint lang-sc'>Ndef(\analyse).set(\num, 12); //change number of partials
 
 (
 {
@@ -892,4 +892,5 @@ sympath = SinOsc.ar((rootnote + chord).midicps, 0, 0.4).mean;
 Out.ar(0,Pan2.ar(in, -0.5) + Pan2.ar(sympath, 0.5));
 }.play
 )</pre>
-<div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/HelpSource/Study Guides/Audio Analysis and Machine Listening.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/HelpSource/Study Guides/Audio Analysis and Machine Listening.schelp</a><br>link::Study Guides/Audio Analysis and Machine Listening::<br>sc version: 3.8.0</div></div></body></html>
+<div class='note'><span class='notelabel'>NOTE:</span> Various examples, ideas, etc. have been taken or derived from the SC documentation, Paul Berg, David Cottle, Nick Collins, and lots of other people in the SuperCollider community.</div>
+<p> <div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/HelpSource/Study Guides/Audio Analysis and Machine Listening.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/HelpSource/Study Guides/Audio Analysis and Machine Listening.schelp</a><br>link::Study Guides/Audio Analysis and Machine Listening::<br>sc version: 3.8.0</div></div></body></html>
