--- a/Computer.html
+++ b/Computer.html
@@ -22,8 +22,9 @@
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Latest'>Latest</a></li>
-<ul class='toc'><li class='toc2'><a href='#Computer.play%20-%20Tutorial%202:%20Monday,%2020%20February'>Computer.play - Tutorial 2: Monday, 20 February</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Extra%20Session'>Extra Session</a></li>
+<ul class='toc'><li class='toc2'><a href='#PRACTICAL%20PROJECT%20DATES!'>PRACTICAL PROJECT DATES!</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Tutorials%20-%20week%209'>Tutorials - week 9</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Troubleshooting%20Sessions'>Troubleshooting Sessions</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Module'>Module</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#Register'>Register</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#News'>News</a></li>
@@ -31,12 +32,17 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Events'>Events</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
-<h3><a class='anchor' name='Computer.play%20-%20Tutorial%202:%20Monday,%2020%20February'>Computer.play - Tutorial 2: Monday, 20 February</a></h3>
-<table>
-<tr><td>09:00<td>TOM HORNER<tr><td>09:20<td>ALAN FOWLER<tr><td>09:40<td>CHRISTOPHER MURPHY<tr><td>09:40<td>DOMINIC CRAMP<tr><td>09:40<td>FREDERICK WORDSWORTH<tr><td>10:35<td>JAN TAN<tr><td>10:35<td>WILLIAM BARNARDO<tr><td>11:15<td>GABRIEL WALKER<tr><td>11:15<td>BENJAMIN STRANGE<tr><td>11:15<td>THOMAS JAMES<tr><td>12:10<td>ELIZABETH PHIPPARD<tr><td>12:10<td>TOBIAS RANDALL-PALEY<tr><td>12:10<td>POPPY RICE<tr><td>14:00<td>FELCITY MARGERESON<tr><td>14:00<td>KATHARINE LOVELL<tr><td>14:00<td>ATHENE BROAD<tr><td>14:55<td>MATILDA GANNON<tr><td>14:55<td>SARAH PENDLETON<tr><td>14:55<td>EMILY SULLIVIN<tr><td>15:50<td>BARRINGTON BROOK<tr><td>15:50<td>ERIN ROBINSON<tr><td>15:50<td>CATHERINE ROBSON</table>
-<div class='warning'><span class='warninglabel'>WARNING:</span> Given that the MRC is undergoing a lift replacement next to my office (including <em>BEAUTIFUL</em> drilling noises all day...), I've booked the <strong>Lyons Studio</strong> for the tutorials. For those who are not familiar with the <strong>Lyons Studio</strong>, it is the studio located in the upper floor of the Music Department main building (SJLCH), past the door, to the left.</div><h3><a class='anchor' name='Extra%20Session'>Extra Session</a></h3>
+<h3><a class='anchor' name='PRACTICAL%20PROJECT%20DATES!'>PRACTICAL PROJECT DATES!</a></h3>
+<div class='warning'><span class='warninglabel'>WARNING:</span> We have dates for the practical project presentations!!</div>
+<p>We have now arrived at 2 dates for the Computer.play performances/installations:
+<p><strong>WEEK 9 - Saturday, 11 MARCH</strong>
+<p><strong>WEEK 12 - THURSDAY, 30 MARCH</strong><h3><a class='anchor' name='Tutorials%20-%20week%209'>Tutorials - week 9</a></h3>
 
-<p>I will do an extra session on <strong>Tuesday, 21 February</strong> instead of the session that was cancelled this week. In addition, after that date we will have tutorials and troubleshooting sessions.<div class='note'><span class='notelabel'>NOTE:</span> We will have an extra teaching session on <strong>Tuesday, 21 February</strong></div><h2><a class='anchor' name='Module'>Module</a></h2>
+<p><strong>Tutorials - Monday, 6 March</strong><h3><a class='anchor' name='Troubleshooting%20Sessions'>Troubleshooting Sessions</a></h3>
+
+<p>We are having 2 troubleshooting sessions in preparation for the performances/installations:<ul>
+<li>7 MARCH, 9:30<li>24 MARCH, 14:00</ul>
+<h2><a class='anchor' name='Module'>Module</a></h2>
 <dl>
 <dt>Module Information<dd><ul>
 <li><a href="./Handbook.html">Handbook</a><li><a href="./Handbook.html#Course%20Materials">Course Materials</a><li><a href="./Handbook.html#Module%20Overview">Module Overview</a><li><a href="./Handbook.html#Assessment">Assessment</a><li><a href="./Assignment Brief.html">Assignment Brief</a><li><a href="./moduleplan.htm">Module Plan</a></ul>
