--- a/Computer.html
+++ b/Computer.html
@@ -22,8 +22,7 @@
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Latest'>Latest</a></li>
-<ul class='toc'><li class='toc2'><a href='#Dates%20for%20Performances/Installations'>Dates for Performances/Installations</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Troubleshooting%20Sessions'>Troubleshooting Sessions</a></li>
+<ul class='toc'><li class='toc2'><a href='#Computer.play(Music,%20Creativity%20&%20Code)%20Event%20#2'>Computer.play(Music, Creativity &amp; Code) Event #2</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Module'>Module</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#Register'>Register</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#News'>News</a></li>
@@ -31,15 +30,16 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Events'>Events</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
-<div class='note'><span class='notelabel'>NOTE:</span> REMINDER: The next troubleshooting session will be on <strong>Friday, 24th of March</strong>.</div><div class='note'><span class='notelabel'>NOTE:</span> REMINDER: The next <code class='code prettyprint lang-sc'>Computer.play</code> event will be on <strong>Thursday, 30th of March</strong>.</div><h3><a class='anchor' name='Dates%20for%20Performances/Installations'>Dates for Performances/Installations</a></h3>
+<h3><a class='anchor' name='Computer.play(Music,%20Creativity%20&%20Code)%20Event%20#2'>Computer.play(Music, Creativity &amp; Code) Event #2</a></h3>
 
-<p>These are the 2 dates for the Computer.play events:
-<p><strong>WEEK 9 - SATURDAY, 11 MARCH</strong>
-<p><strong>WEEK 12 - THURSDAY, 30 MARCH</strong><h3><a class='anchor' name='Troubleshooting%20Sessions'>Troubleshooting Sessions</a></h3>
+<p><strong>Thursday, 30 March 2017 at 6:00pm</strong>
+<p><strong>Rymer Auditorium</strong>
+<p><strong>Department of Music</strong>
+<p><strong>University of York</strong><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/media/robot_Scream.png'/></div>
+<table>
+<tr><td><strong>Computer.play</strong><td><strong>Event #2</strong><tr><td>18:00<td><em>Concert</em> with performances by:<tr><td><td>Alan Fowler<tr><td><td>Athene Broad, Kat Lovell &amp; Fizz Margereson<tr><td><td>Barrington Brook, Erin Robinson &amp; Catherine Robson</table>
 
-<p>We are having 2 troubleshooting sessions in preparation for the performances/installations:<ul>
-<li>TUESDAY, 7 MARCH, 9:30<li>FRIDAY, 24 MARCH, 14:00</ul>
-<h2><a class='anchor' name='Module'>Module</a></h2>
+<p><em>Computer.play(Music, Creativity &amp; Code) examines the creative potential of computer code in music and sound. The module looks at the fundamentals of computer programming, focusing on creative coding and themes related to computer music and interactivity. This event will showcase work by music students that have been exploring SuperCollider, a powerful programming language for the development of music and audio applications.</em><h2><a class='anchor' name='Module'>Module</a></h2>
 <dl>
 <dt>Module Information<dd><ul>
 <li><a href="./Handbook.html">Handbook</a><li><a href="./Handbook.html#Course%20Materials">Course Materials</a><li><a href="./Handbook.html#Module%20Overview">Module Overview</a><li><a href="./Handbook.html#Assessment">Assessment</a><li><a href="./Assignment Brief.html">Assignment Brief</a><li><a href="./moduleplan.htm">Module Plan</a></ul>
