--- a/Classes/Speech.html
+++ b/Classes/Speech.html
@@ -19,13 +19,13 @@
 <div id='summary'>lets you use the Apple speech synthesizer</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/osx/<a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/SCClassLibrary/Common/osx/Speech.sc'>Speech.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/osx/Speech.sc'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/SCClassLibrary/Common/osx/Speech.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/Object.html">Object</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
-<li class='toc2'><a href='#Undocumented class methods'>Undocumented class methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Undocumented%20class%20methods'>Undocumented class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*channels'>channels</a> </li>
 <li class='toc3'><a href='#*doSpeechDoneAction'>doSpeechDoneAction</a> </li>
 <li class='toc3'><a href='#*doWordAction'>doWordAction</a> </li>
@@ -43,15 +43,15 @@
 <li class='toc3'><a href='#*wordAction'>wordAction</a> </li>
 <li class='toc3'><a href='#*wordActions'>wordActions</a> </li>
 </ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
-<ul class='toc'><li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
+<ul class='toc'><li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
 </ul><li class='toc1'><a href='#examples'>Examples</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='description'>Description</a></h2>
 <pre class='code prettyprint lang-sc'>"hi i'm talking with the default voice now, i guess".speak;</pre>
 
 <p>Speech consists of an <a href="./../Classes/Array.html">Array</a> of SpeechChannels. By default Speech is initialized with only one channel, but can be set up to use up to 16 by providing an argument to init. Channels may be used through a SpeechChannel object or by setting the channel in Speech's methods (see examples below).
 <p>Speech is a function of the operating system and not the server. By consequence, <strong>it is not possible to use UGens to filter or record the output directly</strong>. You may be able to patch system output to system input (either by hardware of by software) to rout it to the server.<div class='note'><span class='notelabel'>NOTE:</span> Currently only supported on OS X. In SwingOSC there is the equivalent JSpeech.</div><h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
-<h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
-<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented class methods'>Undocumented class methods</a></h3>
+<h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
+<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented%20class%20methods'>Undocumented class methods</a></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*channels' href='./../Overviews/Methods.html#channels'>channels</a> </h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*doSpeechDoneAction' href='./../Overviews/Methods.html#doSpeechDoneAction'>doSpeechDoneAction</a> (<span class='argstr'>chan</span>)</h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*doWordAction' href='./../Overviews/Methods.html#doWordAction'>doWordAction</a> (<span class='argstr'>chan</span>)</h3>
@@ -74,7 +74,7 @@
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*wordActions' href='./../Overviews/Methods.html#wordActions'>wordActions</a></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*wordActions' href='./../Overviews/Methods.html#wordActions'>wordActions</a> = value</h3>
 <h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
-<h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
+<h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
 <div id='inheritedinstmets'></div><h2><a class='anchor' name='examples'>Examples</a></h2>
 <pre class='code prettyprint lang-sc'>Speech.init(2);
 Speech.channels[0].speak("hallo");
@@ -112,7 +112,7 @@ Speech.doneAction_({arg voiceNum;
 
 <p>Pause the speech while speaking: 1=pause, 0= start<pre class='code prettyprint lang-sc'>Speech.pause(0,1);</pre>
 
-<p>Initialization happens automatically, by default with one voice channel. You may explicitly initalize with more channels, up to 16:<pre class='code prettyprint lang-sc'>(
+<p>Initialization happens automatically, by default with one voice channel. You may explicitly initialize with more channels, up to 16:<pre class='code prettyprint lang-sc'>(
 Speech.init(16);
 
 Task({
@@ -128,4 +128,4 @@ Task({
 //jan@sampleAndHold.org 04/2003
 //update 10/2007</pre>
 
-<p><div class='doclink'>source: <a href='file:///Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/Speech.schelp'>/Applications/SuperCollider 3.7.2/SuperCollider 3.7.2.app/Contents/Resources/HelpSource/Classes/Speech.schelp</a><br>link::Classes/Speech::<br>sc version: 3.7.2</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/Speech.schelp'>/Applications/SuperCollider 3.8/SuperCollider.app/Contents/Resources/HelpSource/Classes/Speech.schelp</a><br>link::Classes/Speech::<br>sc version: 3.8.0</div></div></body></html>
