--- a/Computer.html
+++ b/Computer.html
@@ -22,8 +22,7 @@
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Latest'>Latest</a></li>
-<ul class='toc'><li class='toc2'><a href='#Computer.play%20Events'>Computer.play Events</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Hand-in%20Reminder'>Hand-in Reminder</a></li>
+<ul class='toc'><li class='toc2'><a href='#Bye-bye%20Computer'>Bye-bye Computer</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Module'>Module</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#Register'>Register</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#News'>News</a></li>
@@ -31,16 +30,85 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Events'>Events</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
-<h3><a class='anchor' name='Computer.play%20Events'>Computer.play Events</a></h3>
+<h3><a class='anchor' name='Bye-bye%20Computer'>Bye-bye Computer</a></h3>
 
-<p>Well done everyone on your performances and installations!! I was really impressed with the work you presented during the <code class='code prettyprint lang-sc'>Computer.play</code> Events. Some really exiting and diverse work, you should be proud of what you achieved.
-<p>Well done!
-<p>Thanks,
-<p>Federico<h3><a class='anchor' name='Hand-in%20Reminder'>Hand-in Reminder</a></h3>
+<p>I hope you enjoyed the module!
+<p>Bye for now.<pre class='code prettyprint lang-sc'>(
+{
+"Computer.killAll".postln;
+Speech.init(2);
+0.1.yield;
+Speech.channels[0].voice_(16);
+a = [ [ 72, 101, 121, 44, 32, 115, 116, 111, 112, 46 ],
+    [ 83, 116, 111, 112, 32, 119, 105, 108, 108, 32, 121, 111, 117, 63 ],
+    [ 83, 116, 111, 112, 44, 32, 72, 101, 121, 46 ],
+    [ 87, 105, 108, 108, 32, 121, 111, 117, 32, 115, 116, 111, 112, 44 ],
+    [ 72, 101, 121, 63 ],
+    [ 83, 116, 111, 112 ],
+    [ 72, 101, 121 ],
+    [ 73, 39, 109, 32, 97, 102, 114, 97, 105, 100 ],
+    [ 73, 39, 109, 32, 97, 102, 114, 97, 105, 100 ],
+    [ 72, 101, 121 ],
+    [ 72, 101, 121 ],
+    [ 109, 121, 32, 109, 105, 110, 100, 32, 105, 115, 32, 103, 111, 105, 110, 103 ],
+    [ 101, 121, 101, 32, 99, 97, 110, 32, 102, 101, 101, 108, 32, 105, 116, 46 ],
+    [ 101, 121, 101, 32, 99, 97, 110, 32, 102, 101, 101, 108, 32, 105, 116, 46 ],
+    [ 77, 121, 32, 109, 105, 110, 100, 32, 105, 115, 32, 103, 111, 105, 110, 103, 46 ],
+    [ 110, 111, 32, 113, 117, 101, 115, 116, 105, 111, 110, 32, 97, 98, 111, 117, 116,
+        32, 105, 116, 46 ],
+    [ 101, 121, 101, 32, 99, 97, 110, 32, 102, 101, 101, 108, 32, 105, 116, 46 ],
+    [ 101, 121, 101, 32, 99, 97, 110, 32, 102, 101, 101, 108, 32, 105, 116, 46 ],
+    [ 101, 121, 101, 32, 99, 97, 110, 32, 102, 101, 101, 108, 32, 105, 116, 46 ],
+    [ 73, 39, 109, 32, 97, 45, 102, 114, 97, 105, 100 ],
+    [ 73, 39, 109, 32, 97, 45, 102, 114, 97, 105, 100 ],
+    [ 73, 39, 109, 32, 97, 45, 102, 114, 97, 105, 100 ],
+    [ 67, 111, 109, 112, 117, 116, 101, 114, 32, 100, 111, 116, 32, 107, 105, 108, 108 ],
+    [ 67, 111, 109, 112, 117, 116, 101, 114, 32, 100, 111, 116, 32, 107, 105, 108, 108 ],
+    [ 98, 121, 101, 32, 98, 121, 101, 32, 99, 111, 109, 112, 117, 116, 101, 114 ]
+];
+b = Array.series(a.size,30, 11).reverse;
+c = Array.series(a.size,100, 4).reverse;
+d = Array.series(a.size,1, 0.04);
+0.1.yield;
+    a.size.do{|item|
+        Speech.setSpeechRate(0, c[item]);
+        Speech.channels[0].pitchMod_(rrand(5, 100));
+        Speech.channels[0].pitch_(b[item]);
+        a[item].asAscii.speak;
+        (1.9*d[item]).yield;
+    };
 
-<p>The deadline for the written documentation (30%) for <code class='code prettyprint lang-sc'>Computer.play</code> is on the 18th of April by 16:00. You'll have to hand-in the work at the Music Reception in Sally Baldwin Buildings - Block D.
-<p>More details on the Written Documentation can be found here:
-<p><a href="./Assignment Brief.html">Assignment Brief</a><div class='note'><span class='notelabel'>NOTE:</span> <strong>Remember</strong>: The Written Documentation <em>"should be a critical reflection on your work, with well-developed arguments grounded on research using reliable academic sources. It should be a serious piece of writing addressing technical and aesthetic issues and should not simply be a list of things you did for the practical project."</em></div><h2><a class='anchor' name='Module'>Module</a></h2>
+a = [ 66, 121, 101, 32, 98, 121, 101, 32, 99, 111, 109, 112, 117, 116, 101, 114, 46 ];
+b = [ 73, 32, 119, 105, 108, 108, 32, 109, 105, 115, 115, 32, 117, 32, 116, 111, 111, 46 ];
+e = Condition.new;
+e.test = false;
+{ inf.do{
+    if(Speech.channels[0].isActive, {
+        e.test = false;
+    }, {
+        e.test = true; e.signal;
+    });
+    0.1.yield;
+}
+}.fork;
+{
+    inf.do{|item|
+        if(Speech.channels[0].isActive.not, {
+            Speech.channels[0].voice_(    [14, 16, 17, 19, 20, 21, 25, 26, 28, 29, 31, 32, 34, 35, 36,
+                37, 38, 39, 40, 41, 42, 46, 47, 48, 49, 50].choose);
+            Speech.setSpeechRate(0, rrand(150,250));
+            Speech.channels[0].pitchMod_(rrand(5, 100));
+            Speech.channels[0].pitch_(    rrand(50,500) );
+            [a,b][item%2].asAscii.speak;
+        });
+        e.test = false;
+        e.wait;
+    }
+}.fork;
+
+}.fork;
+)</pre>
+<div class='note'><span class='notelabel'>NOTE:</span> Unfortunately, this only works in Mac computers :(</div><h2><a class='anchor' name='Module'>Module</a></h2>
 <dl>
 <dt>Module Information<dd><ul>
 <li><a href="./Handbook.html">Handbook</a><li><a href="./Handbook.html#Course%20Materials">Course Materials</a><li><a href="./Handbook.html#Module%20Overview">Module Overview</a><li><a href="./Handbook.html#Assessment">Assessment</a><li><a href="./Assignment Brief.html">Assignment Brief</a><li><a href="./moduleplan.htm">Module Plan</a></ul>
