--- a/SSfMT.html
+++ b/SSfMT.html
@@ -32,7 +32,7 @@
 <p>Please bring your computer and headphones to class.<h2><a class='anchor' name='Module'>Module</a></h2>
 <dl>
 <dt>Module Information<dd><ul>
-<li><a href="./Handbook.html">Handbook</a><li><a href="./Handbook.html#Course%20Materials">Course Materials</a><li><a href="./Handbook.html#Module%20Overview">Module Overview</a><li><a href="./Handbook.html#Assessment">Assessment</a><li><a href="./Assignment Brief.html">Assignment Brief</a><li><a href="./moduleplan.htm">Module Plan</a></ul>
+<li><a href="./Module Information/Handbook.html">Handbook</a><li><a href="./Handbook.html#Course%20Materials">Course Materials</a><li><a href="./Handbook.html#Module%20Overview">Module Overview</a><li><a href="./Handbook.html#Assessment">Assessment</a><li><a href="./Assignment Brief.html">Assignment Brief</a><li><a href="./moduleplan.htm">Module Plan</a></ul>
 
 <p><dt>Lectures<dd><ul>
 <li><a href="./Seminars/Introduction to ComputerDotPlay.html">Introduction to ComputerDotPlay</a><li><a href="./Seminars/Composing with Computers 1.html">Composing with Computers 1</a><li><a href="./Seminars/Human-Computer Interaction.html">Human-Computer Interaction</a><li><a href="./Seminars/Composing with Computers 2.html">Composing with Computers 2</a></ul>
@@ -50,7 +50,7 @@
 
 <p><code class='code prettyprint lang-sc'>Computer.play</code> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Talks'>Talks</a></h3>
 
-<p>22/11/2017 <a href="./"https://www.mstrcyork.org/events/event/research-seminar-tanaka/"">Research Seminar: Atau Tanaka Wells</a><h3><a class='anchor' name='Events'>Events</a></h3>
+<p>22/11/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-tanaka/">Research Seminar: Atau Tanaka</a><h3><a class='anchor' name='Events'>Events</a></h3>
 
 <p>28/03/2017 Algorave, ODI Leeds, Leeds<pre class='code prettyprint lang-sc'>Computer.url("https://algorave.com/");</pre>
 
